tests/regression/errors/basic/undefined_var_19.csd
// Undefined variable test 19
vibez.spill("Using undefined:", undefined_var_19)
sus result drip = missing_variable + 19
